@@ -1,5 +1,8 @@
 xx yyy zzzz: 0.4.0 Miek <miek@miek.nl>
   -- major new release, scripts are dropped --
+  * rdup: use ctime not the mtime
+  * rdup: if a directory's ctime is newer then the timestamp
+    include all files under it
   * backup with: rdup-simple
   * restore with: rdup-restore
 
